--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/sisisin-sandbox/try-heroku/issues"
   },
-  "homepage": "https://github.com/sisisin-sandbox/try-heroku#readme"
+  "homepage": "https://github.com/sisisin-sandbox/try-heroku#readme",
+  "dependencies": {
+    "redis": "^3.1.1"
+  }
 }
